removed whitespace, fixed css class and id error, and removed /div

--- a/styler.css
+++ b/styler.css
@@ -19,9 +19,10 @@
 }
 
 .container {
-	margin:  40px  40px;
+	margin: 0 40px 0 40px;
 }
-#numba1 .col-sm-3
+
+#nudacity_logo
 {
 	float: left;
 	max-width: 150px;
@@ -34,7 +35,7 @@
 	left: auto;
 	min-height: 400px;
 	min-width: 600px;
-	margin: 10px 0 0 0 ;
+	margin: 10px 0 0 0;
 }
 
 .featured-work {
